// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Snap render icon Grid 1`] = `
<div
  class="at-grid"
>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            领取中心
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            找折扣
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square at-grid-item--last"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            领会员
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            subtract
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid Snap render image Grid 1`] = `
<div
  class="at-grid"
>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t6160/14/2008729947/2754/7d512a86/595c3aeeNa89ddf71.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            领取中心
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img20.360buyimg.com/jdphoto/s72x72_jfs/t15151/308/1012305375/2300/536ee6ef/5a411466N040a074b.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            找折扣
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square at-grid-item--last"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img10.360buyimg.com/jdphoto/s72x72_jfs/t5872/209/5240187906/2872/8fa98cd/595c3b2aN4155b931.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            领会员
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t10660/330/203667368/1672/801735d7/59c85643N31e68303.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            新品首发
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <span
              class="at-icon at-icon-bookmark"
            />
          </div>
          <span
            class="content-inner__text"
          >
            支持Icon
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid Snap render no border of image Grid 1`] = `
<div
  class="at-grid"
>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t6160/14/2008729947/2754/7d512a86/595c3aeeNa89ddf71.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            领取中心
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img20.360buyimg.com/jdphoto/s72x72_jfs/t15151/308/1012305375/2300/536ee6ef/5a411466N040a074b.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            找折扣
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square at-grid-item--last"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img10.360buyimg.com/jdphoto/s72x72_jfs/t5872/209/5240187906/2872/8fa98cd/595c3b2aN4155b931.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            领会员
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t10660/330/203667368/1672/801735d7/59c85643N31e68303.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            新品首发
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--square"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <span
              class="at-icon at-icon-bookmark"
            />
          </div>
          <span
            class="content-inner__text"
          >
            支持Icon
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid Snap render rect icon Grid -- props columnNum 1`] = `
<div
  class="at-grid"
>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect"
      style="flex: 0 0 25%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            领取中心
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect"
      style="flex: 0 0 25%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            找折扣
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect"
      style="flex: 0 0 25%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            领会员
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect at-grid-item--last"
      style="flex: 0 0 25%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            subtract
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid Snap render rect icon Grid 1`] = `
<div
  class="at-grid"
>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            领取中心
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            找折扣
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect at-grid-item--last"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            领会员
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          />
          <span
            class="content-inner__text"
          >
            subtract
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid Snap render rect image Grid 1`] = `
<div
  class="at-grid"
>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t6160/14/2008729947/2754/7d512a86/595c3aeeNa89ddf71.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            领取中心
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img20.360buyimg.com/jdphoto/s72x72_jfs/t15151/308/1012305375/2300/536ee6ef/5a411466N040a074b.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            找折扣
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect at-grid-item--last"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img10.360buyimg.com/jdphoto/s72x72_jfs/t5872/209/5240187906/2872/8fa98cd/595c3b2aN4155b931.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            领会员
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="at-grid__flex"
  >
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <img
              alt=""
              class="content-inner__img"
              src="https://img12.360buyimg.com/jdphoto/s72x72_jfs/t10660/330/203667368/1672/801735d7/59c85643N31e68303.png"
            />
          </div>
          <span
            class="content-inner__text"
          >
            新品首发
          </span>
        </div>
      </div>
    </div>
    <div
      class="at-grid__flex-item at-grid-item at-grid-item--rect"
      style="flex: 0 0 33.333333333333336%;"
    >
      <div
        class="at-grid-item__content"
      >
        <div
          class="at-grid-item__content-inner"
        >
          <div
            class="content-inner__icon"
          >
            <span
              class="at-icon at-icon-bookmark"
            />
          </div>
          <span
            class="content-inner__text"
          >
            支持Icon
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
